--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                         </div>
                         <div class="screen__body">
                             <div class="screen__image">
-                                <img src="./../img/1.jpg" alt="background">
+                                <img src="./img/1.jpg" alt="background">
                             </div>
                         </div>
                     </div>
@@ -57,7 +57,7 @@
                         </div>
                         <div class="screen__body">
                             <div class="screen__image">
-                                <img src="./../img/2.jpg" alt="background">
+                                <img src="./img/2.jpg" alt="background">
                             </div>
                         </div>
                     </div>
@@ -81,7 +81,7 @@
                         </div>
                         <div class="screen__body">
                             <div class="screen__image">
-                                <img src="./../img/3.jpg" alt="background">
+                                <img src="./img/3.jpg" alt="background">
                             </div>
                         </div>
                     </div>
